Changes since labca_3_3:
	2012/01/11 (TS):
	- glue/ctrlC-polled.c: scilab-5 seems to properly export + declare
	  'basbrk' (even under windows) so we use it.
	- glue/multiEzca.c: silence compiler warnings (64-bit?)  by
	  using ptrdiff_t instead of int and explicit type conversions
	  where appropriate.
	- glue/mglue.c, glue/mglue.h: silence compiler warnings (64-bit?) by
	  using size_t instead of int where appropriate.
	- documentation/Makefile: removed run-time test for scilab version (too
	  hard to get to work under windows). We just in stall the scilab-5 help
	  files anyways.
	- configure/RELEASE: removed CONFIG-SLAC hacks - doesn't work as intended.
	- configure/CONFIG: added defaults for 'windows-x64'
	- configure/RULES: avoid complicated shell commands (which windows command.com
	  is unable to unerstand).
	2012/01/11 (TS):
	- ezca/ezca.c: silenced compiler warnings (signed/unsigned,
	  size_t printf format).
	2010/08/23 (TS):
	- Changed SED commands that transform lcaTest.sce -> lcaTest.m
	  so that the script is (again) properly transformed for matlab.
	  Thanks to Steph Allison for pointing out problems...
Changes since labca_3_2_beta:
	2010/06/04 (TS):
	- Added (partly hand-crafted) help files for scilab-5.
	2010/05/28 (TS):
	- IMPROVEMENT. ezcaGetUnits(), ezcaGet_xxx_Limits(), ezcaGetPrecision(),
	  ezcaGetStatus() used to transfer the native element count even if
	  the PV value itself was discarded.
	  Modified ezca.c so that only 1 element is requested by these calls.
	  This enhances speed with slow connections :-).
	- several small changes to support scilab-5.2. Some header install
	  locations have changed since 5.1; __PARAMS() macro has gone. 
	2009/10/13 (TS):
	- several small changes to support scilab-5.1. (Scilab-5 is completely
	re-vamped.)
	TODO: Since scilab-5 help files must be in their XML format (converted
	to javahelp jars though) we need to re-write the documentation, breaking